fix: align U1 network and image behavior with JM